--- a/index.html
+++ b/index.html
@@ -28,5 +28,7 @@
 
 <button onclick="document.location='https://stake.com/?c=1c1a1fe5'" class="button-3">Stake</button>
 
+<!--Aids-->
+
 </body>
 </html>
