--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <button onclick="document.location='https://steamcommunity.com/profiles/76561198387292602/'" class="button-2">Steam</button>
 
-<button onclick="document.location='https://steamcommunity.com/profiles/76561198387292602/'" class="button-1">Discord</button>
+<button onclick="document.location='https://discordapp.com/users/397795816875622410/'" class="button-1">Discord</button>
 
 <button onclick="document.location='https://stake.com/?c=1c1a1fe5'" class="button-3">Stake</button>
 
