--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <button onclick="document.location='https://discordapp.com/users/397795816875622410/'" class="button-1">Discord</button>
 
-<button onclick="document.location='https://stake.com/?c=1c1a1fe5'" class="button-3">Stake</button>
+<button onclick="document.location='https://www.bybit.com/en-US/invite?ref=WN2YR'" class="button-3">Bybit</button>
 
 </body>
 </html>
